--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.12.0",
     "@mui/system": "^5.12.3",
+    "@mui/x-date-pickers": "^6.16.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
